# consumer-complaints-ml-genai-ntier

./: .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
docs/: 01_abstract.md  02_repository_structure.md  IEEE_Paper_Draft.md  Updated_Architecture_Diagrams.md
docs/api/: openapi.yaml
docs/reports/: 02_viva-faqs.md  03_project-summary.md  04_end-to-end-work-done.md  Project_Report_Full.md
docs/reviews/: 13mar2026_SecondReview.md  30jan2026_InitialReview.md  InitialReview.pptx  InitialReview_outline.md
infra/: .env.example  docker-compose.yml
infra/database/: migration_v2.sql  migration_v3_response_workflow.sql
src/backend/: .env.example  .flake8  README.md  app.py  config.py  requirements-transformer.txt  requirements.txt  setup.cfg
src/backend/app/: config.py  main.py
src/backend/database/: db.py
src/backend/dataset/raw/: complaints.csv
src/backend/genai/: email_sender.py  explanation.py  policy_knowledge_base.py  response_drafter.py
src/backend/ml/: decision_engine.py  predictor.py  severity_detector.py  train_model.py  transformer_predictor.py
src/backend/models/: complaint_classifier.pkl  tfidf_vectorizer.pkl
src/backend/preprocessing/: text_cleaner.py
src/backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_explanation.py  test_integration.py  test_main.py  test_predictor.py  test_preprocessing.py  test_rbac.py  test_response_drafter.py  test_training.py
src/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/frontend/src/api/: client.ts
src/frontend/src/components/: AdminRoute.tsx  ConfidenceBar.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  PrivateRoute.tsx  SkipNavigation.tsx
src/frontend/src/pages/: AdminPage.tsx  HistoryPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResultPage.tsx  SubmitComplaintPage.tsx
src/frontend/src/store/: authSlice.ts
src/frontend/src/types/: api.ts
