[project]
name = "consumer-complaints-ml-genai-ntier"
version = "0.1.0"
description = "N-Tier Enterprise Consumer Complaints Classification System using ML and GenAI (Gemini)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Bhanu Koppadi"}
]
keywords = [
    "consumer-complaints",
    "machine-learning",
    "genai",
    "gemini",
    "fastapi",
    "scikit-learn",
    "nlp",
    "classification"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.7.0",
    "flask-limiter>=4.1.0",
    "python-dotenv==1.0.1",
    "google-generativeai>=0.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "nltk>=3.8.1",
    "pyjwt==2.8.0",
    "psycopg2-binary==2.9.10",
    "pyyaml==6.0.2",
    "httpx==0.27.2",
    "joblib>=1.3.2",
    "gunicorn>=21.0.0",
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | \.coverage
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "*.pyc", "node_modules/*"]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/backend/app"]
omit = ["*/tests/*", "*/test_*.py"]
